feat: react-components skill

--- a/skills/react-components/package.json
+++ b/skills/react-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stitch-to-react-pro",
+  "name": "react-components",
   "version": "1.0.0",
   "description": "Professional design-to-code orchestration for Stitch MCP",
   "type": "module",
